# Pythia

./: .env.template  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CHANGESET.md  CLAUDE.md  CODEMAP.md  CONTRIBUTING.md  Fred_description.docx  LICENCE.txt  Makefile  PUBLIC_APIS.md  README.md  REPO_TREE.txt  SCHEMAS.md  build_dashboard_parquet.py  community_benchmark.py  conftest.py  constraints-ci.txt  grounding_check.py  inspect_parquet.py  pre-commit-config.yaml  pyproject.toml  pytest.ini  python_library_requirements.txt  requirements-test.txt  run_forecaster.py  vscode
.claude/: launch.json
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.githooks/: pre-commit
.streamlit/: secrets.toml
Dashboard/: __init__.py  streamlit_app.py
Depreciated/: READMEold.md
data/: resolver.duckdb.backup-20260306  resolver.duckdb.wal
docs/: CI.md  DEBUG_UI.md  INGESTION.md  SECRETS.md  audit_2026-07.md  fred_overview.md  hs_hazard_tail_packs.md  hs_regime_change.md  precedence.md  testing-without-fixtures.md
forecaster/: GTMC1.py  __init__.py  aggregate.py  aggregators.py  bayes_mc.py  binary_prompts.py  cli.py  config.py  ensemble.py  hazard_prompts.py  history_loaders.py  hs_utils.py  io_logs.py  llm_logging.py  month_utils.py  prompts.py  providers.py  research.py  scenario_writer.py  scoring.py  seen_guard.py  self_search.py  topic_classify.py  trace_validation.py
horizon_scanner/: README.md  _utils.py  conflict_forecasts.py  crisiswatch.py  crisiswatch_horizon.py  db_writer.py  hdx_signals.py  horizon_scanner.py  hs_country_list.txt  hs_prompt.py  hs_triage_grounding_prompts.py  hs_triage_prompts.py  llm_logging.py  prompts.py  rc_grounding_prompts.py  rc_prompts.py  regime_change.py  regime_change_llm.py  reliefweb.py  seasonal_context.py  seasonal_filter.py  triage.py
legacy_diagnostics/: connectors_report.jsonl  dtm_run.json
logs/: forecaster_run_20250831-135533.txt  forecaster_run_20250831-142658.txt  forecaster_run_20250831-144903.txt  forecaster_run_20250831-185558.txt  forecaster_run_20250831-193055.txt  forecaster_run_20250901-112305.txt  forecaster_run_20250901-114521.txt  forecaster_run_20250901-124709.txt  forecaster_run_20250901-131942.txt  forecaster_run_20250901-151653.txt  forecaster_run_20250901-160905.txt  forecaster_run_20250901-162059.txt  forecaster_run_20250901-172824.txt  forecaster_run_20250902-103831.txt  forecaster_run_20250902-111004.txt  forecaster_run_20250902-112556.txt  forecaster_run_20250902-114303.txt  forecaster_run_20250902-122810.txt  forecaster_run_20250902-153434.txt  forecaster_run_20250902-163143.txt  forecaster_run_20250902-170148.txt  forecaster_run_20250902-174606.txt  forecaster_run_20250902-181611.txt  forecaster_run_20250902-182854.txt  forecaster_run_20250903-151511.txt  forecaster_run_20250903-153858.txt  forecaster_run_20250903-155833.txt  forecaster_run_20250903-164330.txt  forecaster_run_20250903-181454.txt  forecaster_run_20250903-183750.txt  forecaster_run_20250904-172345.txt  forecaster_run_20250905-103459.txt  forecaster_run_20250905-103906.txt  forecaster_run_20250905-110220.txt  forecaster_run_20250905-132503.txt  forecaster_run_20250905-134739.txt  forecaster_run_20250905-160607.txt  forecaster_run_20250905-162102.txt  forecaster_run_20250905-190714.txt  forecaster_run_20250906-121523.txt
pythia/: acaps.py  acled_political.py  adversarial_check.py  buckets.py  config.yaml  fewsnet_food_security.py  food_security.py  gdelt.py  ipc_phases.py  llm_profiles.py  market_snapshot.py  model_costs.json  (+1 more)
(+1140 files in other folders)
