[tool.poetry]
name = "pythia"
version = "0.1.0"
description = ""
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
packages = [
    { include = "resolver" }
]
include = [
    { path = "resolver/config/series_semantics.yml" }
]

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.32.0"
asknews = "^0.11.2"
numpy = "^2.3.0"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
forecasting-tools = "^0.2.54"
pydantic = ">=2.6,<3.0"
duckdb = {version = ">=1.0,<2.0", optional = true}
httpx = {version = ">=0.27,<1.0", optional = true}
pytest = {version = ">=8.2,<9.0", optional = true}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
duckdb = ">=1.0,<2.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
db = ["duckdb"]
test = ["duckdb", "httpx", "pytest"]
