# Pythia
# Copyright (c) 2025 Kevin Wyjad
# Licensed under the Pythia Non-Commercial Public License v1.0.
# See the LICENSE file in the project root for details.

[tool.poetry]
name = "pythia"
version = "0.1.0"
description = ""
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
packages = [
    { include = "resolver" }
]
include = [
    { path = "resolver/config/series_semantics.yml" }
]

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.32.0"
asknews = "^0.11.2"
numpy = "^2.3.0"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
forecasting-tools = "^0.2.54"
pydantic = ">=2.6,<3.0"
duckdb = "^1.1.0"
httpx = {version = ">=0.27,<1.0", optional = true}
pytest = {version = ">=8.2,<9.0", optional = true}
pytest-xdist = {version = "==3.6.1", optional = true}
dtmapi = {version = ">=0.1.5,<0.2", optional = true}
pandas = {version = ">=2.2", optional = true}
python-dateutil = {version = ">=2.9", optional = true}
ipykernel = {version = "^6.29.5", optional = true}
python-docx = "^1.1.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
db = ["duckdb"]
dev = ["ipykernel"]
test = ["duckdb", "httpx", "pytest", "pytest-xdist"]
connectors = ["dtmapi"]
ingestion = ["dtmapi", "pandas", "python-dateutil"]

[tool.poe.tasks]
test-idmc-cli = "pytest -q resolver/tests/test_idmc_cli_*"
